# Storage

./: CMakeLists.txt  README.md
common/: crc32.cpp  crc32.h  net.cpp  net.h  protocol.h
deploy/: storage_server.yaml
scripts/: client.sh  nvme-tcp_server.sh  s3_multipartdownload.py
server/: block_store.cpp  block_store.h
